--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class = "backgroundSpace">
   <div class = "startSpace">
-    <h1 class="h1Title"><img src="/images/soccer-ball-png-26377.png" alt="Soccer Ball on fire" class="imgLogo">Iron Champioship Manager</h1>
+    <h1 class="h1Title"><img src="./images/soccer-ball-png-26377.png" alt="Soccer Ball on fire" class="imgLogo">Iron Champioship Manager</h1>
     <button type="submit" class="startGame">Start Game</button>
   </div>
   <script src="teams.js"></script>
