readme and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   
-  <title>Document</title>
+  <title>Iron Championship Manager</title>
 </head>
 <body class = "backgroundSpace">
   <div class = "startSpace">
-    <h1 class="h1Title"><img src="./images/soccer-ball-png-26377.png" alt="Soccer Ball on fire" class="imgLogo">Iron Champioship Manager</h1>
+    <h1 class="h1Title"><img src="./images/soccer-ball-png-26377.png" alt="Soccer Ball on fire" class="imgLogo">Iron Championship Manager</h1>
     <button type="submit" class="startGame">Start Game</button>
   </div>
   <script src="teams.js"></script>
